spec/e2e/field/unknown_field.lit
type Foo {}

let a = Foo()
a.x = 1 # error: [line 4] Runtime error: Undefined property 'x' for Foo.
